ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/vote"
        backend:
          service:
            name: vote-service
            port:
              number: 8080
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vote-web
            port:
              number: 3000
